--- a/calculator.css
+++ b/calculator.css
@@ -11,3 +11,19 @@ td {
 #equalButton{
 	width: 200px;
 }
+
+#topDisplay {
+	width: 800px;
+}
+
+.calculator-screen {
+  width: 590px;
+  font-size: 5rem;
+  height: 80px;
+  border: none;
+  background-color: #252525;
+  color: #fff;
+  text-align: right;
+  padding-right: 20px;
+  padding-left: 10px;
+}
